--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   </head>
   <body class="home">
     <header class="header">
-      <h1 class="header__titulo">ALEIDA GARDUÑO CRAVIOTO</h1>
+      <h1 class="header__titulo">
+        ALEIDA<br />
+        <span>GARDUÑO</span><br />
+        CRAVIOTO
+      </h1>
     </header>
     <div class="descripcion">
       Portafolio
