--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body class="home">
     <header class="header">
       <h1 class="header__titulo">
-        ALEIDA<br />
-        <span>GARDUÑO</span><br />
-        CRAVIOTO
+        <span>ALEIDA</span><br />
+        <span class="header__titulo-segundo">GARDUÑO</span><br />
+        <span>CRAVIOTO</span>
       </h1>
     </header>
     <div class="descripcion">
@@ -68,5 +68,6 @@
         sígueme en instagram
       </p>
     </footer>
+    <!-- <img src="./assets/linea.png" alt="" /> -->
   </body>
 </html>
