acerca de mi -04112020

--- a/acercademi.html
+++ b/acercademi.html
@@ -5,39 +5,42 @@
     <meta charset="UTF-8" />
     <!-- https://developer.mozilla.org/es/docs/M%C3%B3vil/Viewport_meta_tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portafolio Aleida</title>
+    <title>Acerca de mi</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/modern-css-reset/dist/reset.min.css"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-
-  <body class="home">
-    <header class="header">
+  <body class="layout">
+    <!-- <header class="header">
       <h1 class="header__titulo">
         <span>ALEIDA</span><br />
         <span class="header__titulo-segundo">GARDUÑO</span><br />
         <span>CRAVIOTO</span>
       </h1>
-    </header>
+    </header> -->
     <div class="descripcion">
-      Portafolio
+      Acerca de mi
     </div>
+    <p class="biografia">
+      Mi nombre es Aleida,
+      <br />
+      soy diseñadora
+    </p>
+    <img
+      src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1603749842/aleida_z6d7p7.png"
+      alt="Aleida"
+      class="yo"
+    />
     <nav class="nav">
       <ul class="menu">
-        <li class="menu__item">
-          <a href="https://iml1m.csb.app/acercademi.html">ACERCA DE MI</a>
-        </li>
-        <li class="menu__item">
-          <a href="https://iml1m.csb.app/diseno.html">DISEÑO</a>
-        </li>
-        <li class="menu__item">
-          <a href="https://iml1m.csb.app/contacto.html">CONTACTO</a>
-        </li>
+        <li class="menu__item"><a href="/">back</a></li>
+        <!-- <li class="menu__item"><a href="http://">DISEÑO</a></li>
+        <li class="menu__item"><a href="http://">CONTACTO</a></li> -->
       </ul>
     </nav>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <a target="_blank" href="http://instagram.com">
         <svg
           class="footer__instagram"
@@ -74,7 +77,7 @@
         <br />
         sígueme en instagram
       </p>
-    </footer>
+    </footer> -->
     <!-- <img src="./assets/linea.png" alt="" /> -->
   </body>
 </html>
