acerca de mi - done

--- a/acercademi.html
+++ b/acercademi.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="layout">
+  <body class="layout acercade">
     <!-- <header class="header">
       <h1 class="header__titulo">
         <span>ALEIDA</span><br />
@@ -28,11 +28,13 @@
       <br />
       soy diseñadora
     </p>
-    <img
-      src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1603749842/aleida_z6d7p7.png"
-      alt="Aleida"
-      class="yo"
-    />
+    <figure>
+      <img
+        src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1603749842/aleida_z6d7p7.png"
+        alt="Aleida"
+        class="yo"
+      />
+    </figure>
     <nav class="nav">
       <ul class="menu">
         <li class="menu__item"><a href="/">back</a></li>
