--- a/diseno.html
+++ b/diseno.html
@@ -13,19 +13,79 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body class="categoria">
-    <h2 class="categoria__titulo">Diseño</h2>
-    <nav class="categoria__menu">
-      <ul>
-        <li>
-          <a href="#">Editorial</a>
-        </li>
-        <li>
-          <a href="#">Identidad</a>
-        </li>
-        <li>
-          <a href="#">Ilustración</a>
-        </li>
-      </ul>
-    </nav>
+    <div>
+      <h2 class="categoria__titulo">Diseño</h2>
+      <nav class="categoria__menu">
+        <ul>
+          <li>
+            <a href="#editorial">Editorial</a>
+          </li>
+          <li>
+            <a href="#identidad">Identidad</a>
+          </li>
+          <li>
+            <a href="#ilustracion">Ilustración</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div class="categoria__proyectos">
+      <section id="editorial">
+        <div>
+          <ul>
+            <li>
+              <img
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                alt=""
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="identidad">
+        <div>
+          <ul>
+            <li>
+              <img
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                alt=""
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="ilustracion">
+        <div>
+          <ul>
+            <li>
+              <img
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                alt=""
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
   </body>
 </html>
