--- a/diseno.html
+++ b/diseno.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<!-- https://developer.mozilla.org/es/docs/Web/HTML/Atributos_Globales/lang -->
 <html lang="ex-MX">
   <head>
     <meta charset="UTF-8" />
-    <!-- https://developer.mozilla.org/es/docs/M%C3%B3vil/Viewport_meta_tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio Aleida</title>
     <link
@@ -12,11 +10,12 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body class="categoria">
-    <div>
+    <div class="categoria__nav">
       <h2 class="categoria__titulo">Diseño</h2>
       <nav class="categoria__menu">
-        <ul>
+        <ul role="list">
           <li>
             <a href="#editorial">Editorial</a>
           </li>
@@ -32,7 +31,7 @@
     <div class="categoria__proyectos">
       <section id="editorial">
         <div>
-          <ul>
+          <ul role="list">
             <li>
               <img
                 src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
@@ -51,7 +50,7 @@
 
       <section id="identidad">
         <div>
-          <ul>
+          <ul role="list">
             <li>
               <img
                 src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
@@ -64,7 +63,7 @@
 
       <section id="ilustracion">
         <div>
-          <ul>
+          <ul role="list">
             <li>
               <img
                 src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
