--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
     <div class="descripcion">
       Portafolio
     </div>
-    <nav class="nav">
-      <ul class="menu">
+    <nav class="nav" role="navigation">
+      <ul class="menu" role="list">
         <li class="menu__item">
-          <a href="https://iml1m.csb.app/acercademi.html">ACERCA DE MI</a>
+          <a href="acercademi.html">ACERCA DE MI</a>
         </li>
         <li class="menu__item">
-          <a href="https://iml1m.csb.app/diseno.html">DISEÑO</a>
+          <a href="diseno.html">DISEÑO</a>
         </li>
         <li class="menu__item">
-          <a href="https://iml1m.csb.app/contacto.html">CONTACTO</a>
+          <a href="contacto.html">CONTACTO</a>
         </li>
       </ul>
     </nav>
@@ -73,6 +73,5 @@
         sígueme en instagram
       </p>
     </footer>
-    <!-- <img src="./assets/linea.png" alt="" /> -->
   </body>
 </html>
