--- a/diseno.html
+++ b/diseno.html
@@ -34,13 +34,13 @@
           <ul role="list">
             <li>
               <img
-                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1606495622/Frame_truqi1.jpg"
                 alt=""
               />
             </li>
             <li>
               <img
-                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1606495622/Captura_de_Pantalla_2020-09-28_a_la_s_15.49_2_xbhnrx.jpg"
                 alt=""
               />
             </li>
@@ -66,19 +66,19 @@
           <ul role="list">
             <li>
               <img
-                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719703/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.06_fbeueh.png"
                 alt=""
               />
             </li>
             <li>
               <img
-                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719695/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.00_w60spo.png"
                 alt=""
               />
             </li>
             <li>
               <img
-                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719704/Captura_de_Pantalla_2020-11-18_a_la_s_11.13.16_lje8sr.png"
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1605719694/Captura_de_Pantalla_2020-11-18_a_la_s_11.12.52_ehbjqs.png"
                 alt=""
               />
             </li>
