--- a/diseno.html
+++ b/diseno.html
@@ -40,7 +40,19 @@
             </li>
             <li>
               <img
-                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1606495622/Captura_de_Pantalla_2020-09-28_a_la_s_15.49_2_xbhnrx.jpg"
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1606929478/Captura_de_Pantalla_2020-12-02_a_la_s_10.58.45_cnmo75.png"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1606929478/Captura_de_Pantalla_2020-12-02_a_la_s_10.58.33_ajjabp.png"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="https://res.cloudinary.com/dkixdpdpk/image/upload/v1606929479/Captura_de_Pantalla_2020-12-02_a_la_s_10.58.38_unwk4j.png"
                 alt=""
               />
             </li>
