--- a/diseno.html
+++ b/diseno.html
@@ -9,24 +9,27 @@
       href="https://unpkg.com/modern-css-reset/dist/reset.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="./js/main.js" defer></script>
   </head>
 
   <body class="categoria">
     <div class="categoria__nav">
-      <h2 class="categoria__titulo">Diseño</h2>
-      <nav class="categoria__menu">
-        <ul role="list">
-          <li>
-            <a href="#editorial">Editorial</a>
-          </li>
-          <li>
-            <a href="#identidad">Identidad</a>
-          </li>
-          <li>
-            <a href="#ilustracion">Ilustración</a>
-          </li>
-        </ul>
-      </nav>
+      <div>
+        <h2 class="categoria__titulo">Diseño</h2>
+        <nav class="categoria__menu">
+          <ul role="list">
+            <li>
+              <a href="#editorial">Editorial</a>
+            </li>
+            <li>
+              <a href="#identidad">Identidad</a>
+            </li>
+            <li>
+              <a href="#ilustracion">Ilustración</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
     <div class="categoria__proyectos">
       <section id="editorial">
@@ -98,5 +101,6 @@
         </div>
       </section>
     </div>
+    <a class="backbutton" href="/">back</a>
   </body>
 </html>
