--- a/acercademi.html
+++ b/acercademi.html
@@ -19,6 +19,13 @@
       Mi nombre es Aleida,
       <br />
       soy diseñadora
+      <br />
+      Me gusta ilustrar y jugar con diferentes técnicas
+      <br />
+      como el uso de acuarelas, acrílicos y grabados.
+      <br />
+      <br />
+      Siempre abierta para una colaboración :)
     </p>
     <figure>
       <img
