--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </ul>
     </nav>
     <footer class="footer">
-      <a target="_blank" href="http://instagram.com">
+      <a target="_blank" href="http://instagram.com/leids.dsgn      ">
         <svg
           class="footer__instagram"
           width="28"
